generate external types json

--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "redirects-yaml": "^2.0.3",
     "rollup": "^2.22.2",
     "striptags": "^3.1.1",
+    "typedoc": "^0.22.6",
+    "typescript": "^4.4.4",
     "unistore": "^3.5.2",
     "webdev-infra": "^1.0.28"
   },
@@ -85,7 +87,6 @@
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^13.11.1",
     "@types/node-fetch": "^2.5.12",
-    "@types/resize-observer-browser": "^0.1.4",
     "@types/tmp": "^0.2.0",
     "ava": "^3.12.1",
     "chalk": "^4.1.0",
@@ -123,7 +124,6 @@
     "stylelint-config-sass-guidelines": "^7.1.0",
     "terser": "^5.4.0",
     "tmp": "^0.2.1",
-    "typescript": "^3.8.3",
     "unified-lint-rule": "^1.0.6",
     "unist-util-visit": "^2.0.3",
     "uslug": "^1.0.4",
